# django-http-debug

./: README.md  pyproject.toml
django_http_debug/: admin.py  middleware.py  models.py  views.py
django_http_debug/migrations/: 0001_initial.py  0002_debugendpoint_content_type_debugendpoint_is_base64.py  0003_requestlog_query_string.py  0004_debugendpoint_logging_enabled.py
tests/: conftest.py  test_django_http_debug.py
tests/test_project/: settings.py
